# preview_attachment

./: .gitignore  README.md  license.txt  pyproject.toml
preview_attachment/: hooks.py  modules.txt
preview_attachment/public/js/: attachment.js  preview_attachment.bundle.js
preview_attachment/public/scss/: preview_attachment.bundle.scss
